Add new main action: format